--- a/src/pages/workshops/[...name].astro
+++ b/src/pages/workshops/[...name].astro
@@ -50,7 +50,7 @@ const { speaker } = Astro.props as { speaker: Speaker };
 
 // Import all images
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "images/speakers/*.{jpeg,jpg,png,gif}",
+  "images/speakers/*.{jpeg,jpg,png,gif}"
 );
 
 // Find speaker's sessions across all categories and forum schedule
@@ -60,7 +60,7 @@ const speakerSessions = [
     (acc: Session[], [category, sessions]: [string, Session[]]) => {
       const matchingSessions = sessions
         .filter((session) =>
-          session.speakers.some((s) => s.name === speaker.name),
+          session.speakers.some((s) => s.name === speaker.name)
         )
         .map((session) => ({
           ...session,
@@ -69,14 +69,14 @@ const speakerSessions = [
 
       return [...acc, ...matchingSessions];
     },
-    [],
+    []
   ),
   // Get sessions from forum schedule
   ...scheduleForum
     .filter(
       (session) =>
         session.speakers &&
-        session.speakers.some((s) => s.name === speaker.name),
+        session.speakers.some((s) => s.name === speaker.name)
     )
     .map((session) => ({
       title: session.title,
@@ -149,7 +149,7 @@ const socialIconMap: Record<string, string> = {
                 Object.entries(speaker.socialLinks || {})
                   .filter(
                     ([_, url]) =>
-                      url && url.trim() !== "" && url !== "undefined",
+                      url && url.trim() !== "" && url !== "undefined"
                   )
                   .map(([platform, url]) => (
                     <a
@@ -208,7 +208,7 @@ const socialIconMap: Record<string, string> = {
                     <li class="single-agenda-card single-accordion-item card-hover">
                       <div class="top">
                         <div class="left">
-                          <div class="timeslot">
+                          <div class="timeslot timeslot-speaker">
                             <p class="timedate">{session.date}</p>
                             <p>{session.timeSlot}</p>
                           </div>
@@ -237,5 +237,12 @@ const socialIconMap: Record<string, string> = {
     position: relative;
     overflow: hidden;
     width: 100%;
+  }
+  .timeslot {
+    width: 8em !important;
+  }
+  .gradient-circle-wrap {
+    display: flex;
+    justify-content: center;
   }
 </style>
