--- a/src/pages/zh/workshops/[...name].astro
+++ b/src/pages/zh/workshops/[...name].astro
@@ -238,4 +238,11 @@ const socialIconMap: Record<string, string> = {
     overflow: hidden;
     width: 100%;
   }
+  .timeslot {
+    width: 8em !important;
+  }
+  .gradient-circle-wrap {
+    display: flex;
+    justify-content: center;
+  }
 </style>
