--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     location="Hangzhou, China"
     links={[
       {
-        text: "Call for Proposals - 8/18 Due",
-        link: "/#proposals",
+        text: "Get Tickets",
+        link: "/tickets",
         openInNewTab: false,
       },
     ]}
@@ -166,7 +166,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     ]}
     ctaButton={{
       text: "See full schedule",
-      link: "/schedule/",
+      link: "/schedule",
     }}
   />
 
