--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -42,8 +42,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     location="浙江 杭州"
     links={[
       {
-        text: "提案征集 Call For Proposals - 8月18日 截止",
-        link: "/zh/#proposals",
+        text: "获取门票",
+        link: "/zh/tickets",
         openInNewTab: false,
       },
     ]}
@@ -166,8 +166,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
       },
     ]}
     ctaButton={{
-      text: "日程安排即将公布",
-      link: "",
+      text: "查看全部议程",
+      link: "/zh/schedule",
     }}
   />
 
