--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -7,10 +7,10 @@ import Schedules from "components/Schedules.astro";
 ---
 
 <Layout
-  title="Schedule Day 1 – GOSIM Hangzhou 2025"
+  title="Sept 13 – GOSIM Hangzhou 2025"
   description="GOSIM Hangzhou 2025 is a gathering of open-source AI projects, developers, researchers, and industry sponsors to share knowledge, learn from each other, and collaborate."
   navBackground="light"
-  pageTransitionName="Schedule"
+  pageTransitionName="Sept 13"
 >
   <HeroText title="Schedule: September 13" />
 
