--- a/src/pages/zh/schedule.astro
+++ b/src/pages/zh/schedule.astro
@@ -7,10 +7,10 @@ import Schedules from "components/SchedulesZh.astro";
 ---
 
 <Layout
-  title="议程安排 第一天 – GOSIM 杭州 2025"
+  title="9月13日 – GOSIM 杭州 2025"
   description="GOSIM 杭州 2025 是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和协作。"
   navBackground="light"
-  pageTransitionName="Schedule"
+  pageTransitionName="9月13日"
 >
   <HeroText title="议程安排：9月13日" />
 
