Bug fix for timeslot div

--- a/src/components/Schedules.astro
+++ b/src/components/Schedules.astro
@@ -498,4 +498,7 @@ const getEventUrl = (title: string): string => {
     flex-direction: column;
     gap: 0.25rem;
   }
+  .timeslot {
+    min-width: 8em !important;
+  }
 </style>
