Clean up All Schedules pages
Chinese and English versions

--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -432,4 +432,10 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.1);
   }
+  @media screen and (max-width: 1070px) {
+    .language-dropdown {
+      position: absolute;
+      left: 130px;
+    }
+  }
 </style>
