--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -911,8 +911,7 @@
     background-color: var(--color-border);
     margin: 0 24px;
 }
-@media screen and (max-width: 1280px) {
-   .date-outerwrap {
+ .date-outerwrap {
       width: 100%;
        padding-bottom: var(--row-gap);
        border-bottom: 1px solid var(--color-border);
@@ -924,7 +923,7 @@
   .datefw {
     width: 100%;
   }
-}
+
 
 /* ------------------------- Filter Box -------------------------------------------------- */
 
@@ -1189,6 +1188,7 @@
 
 .tracks {
   display: flex;
+  justify-content: flex-end;
 }
 
 .tracks .single-filter {
