Organized all schedule into one bilingual json for easier management

--- a/src/pages/schedule-day-2.astro
+++ b/src/pages/schedule-day-2.astro
@@ -3,7 +3,7 @@
 import Layout from "layouts/LayoutLanding.astro";
 import GetTickets from "components/GetTickets.astro";
 import HeroText from "components/HeroText.astro";
-import Schedules from "components/Schedules.astro";
+import BilingualSchedule from "components/BilingualSchedule.astro";
 ---
 
 <Layout
@@ -14,7 +14,7 @@ import Schedules from "components/Schedules.astro";
 >
   <HeroText title="Schedule: September 14" />
 
-  <Schedules currentDay="September 14" />
+  <BilingualSchedule currentDay="September 14" />
 
   <GetTickets
     title="Grab your GOSIM Hangzhou ticket"
