--- a/src/pages/zh/schedule.astro
+++ b/src/pages/zh/schedule.astro
@@ -3,7 +3,7 @@
 import Layout from "layouts/LayoutLandingZh.astro";
 import GetTickets from "components/GetTickets.astro";
 import HeroText from "components/HeroText.astro";
-import Schedules from "components/SchedulesZh.astro";
+import BilingualSchedule from "components/BilingualSchedule.astro";
 ---
 
 <Layout
@@ -14,7 +14,7 @@ import Schedules from "components/SchedulesZh.astro";
 >
   <HeroText title="议程安排：9月13日" />
 
-  <Schedules currentDay="9月13日" />
+  <BilingualSchedule currentDay="9月13日" />
 
   <GetTickets
     title="获取您的GOSIM杭州门票"
